<resources>
    <string name="app_name">friendFinder</string>
    <string name="app_label">FriendFinder</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_interest">Interest</string>
    <string name="login_activity_title_label_1"></string>
    <string name="interest_activity">Interest Update</string>
    <string name="login_activity_title_label_2">FriendFinder</string>
    <string name="login_activity_hint_email">Enter email</string>
    <string name="login_activity_hint_password">Enter password</string>
    <string name="login_activity_button_login">Login</string>
    <string name="login_activity_button_sign_up">Sign up</string>
    <string name="register_activity_hint_name">Name</string>
    <string name="register_activity_hint_email">Email</string>
    <string name="register_activity_hint_password">Password</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="search_hint">Search name</string>
    <string name="register_activity_button_sign_up">Sign up</string>
    <string name="action_settings">Settings</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_checkbox_title">Notification check</string>
    <string name="pref_background_title">Background Color</string>
    <string name="pref_list_title">Background Color</string>
    <string name="adv_search_activity_hint_moviegenres">MusicGenres</string>
</resources>
