<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="portrait"
    tools:context="grace.friendfinder.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_activity_title_label_1"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_activity_title_label_2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:typeface="serif"
        android:textIsSelectable="false"
        android:textSize="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <EditText
            android:id="@+id/registerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/register_activity_hint_name" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/register_activity_hint_email" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender1"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender2"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerPassword"
            android:hint="@string/register_activity_hint_password" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_button_sign_up"
            android:id="@+id/btnRegister"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/friendfinder_button" />
    </LinearLayout>

</RelativeLayout>